# GRRT

./: .gitignore  50k-disk.hdr  50k-disk.hdr.xmp  50k-disk_linear.hdr  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build.sh  cuda_kerr.hdr  cuda_kerr.hdr.xmp  cuda_kerr_linear.hdr  cuda_test.hdr  cuda_test_linear.hdr  gr-raytracer-blender-spec_1.md  output.hdr  output.hdr.xmp  output_linear.hdr  test.hdr  test_linear.hdr
.claude/: settings.local.json
.serena/: project.yml
.superpowers/brainstorm/3579-1775366715/content/: spectral-pipeline.html
.superpowers/brainstorm/3579-1775366715/state/: server-info  server-stopped
cli/: main.cpp
cuda/: cuda_backend.cu  cuda_backend.h  cuda_camera.h  cuda_color.h  cuda_geodesic.h  cuda_math.h  cuda_metric.h  cuda_noise.h  cuda_render.cu  cuda_render_upload.h  cuda_scene.h  cuda_types.h  cuda_vol_host_data.cpp  cuda_vol_host_data.h  cuda_volumetric_disk.h
cuda/tests/: test_cuda.cu
docs/: profile_results.txt
docs/superpowers/plans/: 2026-03-17-accretion-disk.md  2026-03-17-kerr-metric.md  2026-03-17-vertical-slice.md  2026-03-19-cuda-backend.md  2026-03-21-volumetric-accretion-disk.md  2026-03-26-disk-edge-artifacts.md  2026-03-26-disk-noise-improvements.md  2026-03-27-flux-limited-vertical-structure.md  2026-04-05-spectral-output.md  2026-04-27-volumetric-disk-smoothing.md
docs/superpowers/specs/: 2026-03-17-accretion-disk-design.md  2026-03-17-kerr-metric-design.md  2026-03-17-vertical-slice-design.md  2026-03-18-adaptive-stepping-design.md  2026-03-18-auto-exposure-design.md  2026-03-19-cuda-backend-design.md  2026-03-19-volumetric-accretion-disk-design.md  2026-03-26-disk-noise-improvements-design.md  2026-03-27-flux-limited-vertical-structure-design.md  2026-04-05-spectral-output-design.md  2026-04-27-cuda-parity-modal-design.md  2026-04-27-volumetric-disk-smoothing-design.md
include/grrt/: api.h  types.h
include/grrt/camera/: camera.h
include/grrt/color/: atomic_data.h  opacity.h  spectrum.h
include/grrt/geodesic/: geodesic_tracer.h  integrator.h  rk4.h
include/grrt/math/: constants.h  fast_trig.h  matrix4.h  noise.h  vec3.h  vec4.h
include/grrt/render/: fits_writer.h  renderer.h  tonemapper.h
include/grrt/scene/: accretion_disk.h  celestial_sphere.h  volumetric_disk.h
include/grrt/spacetime/: kerr.h  metric.h  schwarzschild.h
scripts/: angle_sweep.sh  spin_sweep.sh  validate_volumetric.sh
src/: accretion_disk.cpp  api.cpp  camera.cpp  celestial_sphere.cpp  fits_writer.cpp  geodesic_tracer.cpp  kerr.cpp  metric.cpp  noise.cpp  opacity.cpp  renderer.cpp  rk4.cpp  schwarzschild.cpp  spectrum.cpp  tonemapper.cpp  volumetric_disk.cpp
tests/: test_opacity.cpp  test_spectral.cpp  test_volumetric.cpp
